# slipcover

./: .gitignore  .gitmodules  CLAUDE.md  MANIFEST.in  Makefile  README.md  TODO  atomic.cxx  counter.cxx  how.md  poc.py  probe.cxx  pyproject.toml  pyptr.h  setup.cfg  setup.py  slipcover-class.py  slipcover.py  stackpatch.cxx  test-failure.py  tox.ini  tracker.cxx  trampoline.py
.github/workflows/: build-and-upload.yml  codeql.yml  release.yml  run-tests.yml  test.yml  tests.yml
benchmark/: benchmark.pkl  bm_testme.py  run_benchmarks.py
benchmarks/: benchmarks.json  benchmarks.pkl  benchmarks.py  bm_mdp.py  bm_raytrace.py  bm_spectral_norm.py  bm_sudoku.py  plot_versions.py  run_benchmarks.py  sudoku-hardest.txt  sudoku-top95.txt
slipcover/: __main__.py  branch.py  bytecode.py  slipcover.py
src/: probe.cxx
src/slipcover/: __init__.py  __main__.py  agent.py  branch.py  bytecode.py  config.py  fuzz.py  git_utils.py  importer.py  isolate.py  lcovreport.py  pytest_plugin.py  schemas.py  session_history.py  slipcover.py  version.py  xmlreport.py
test/: class_test.py  foo-importer.py  foo.py  slipcover_test.py  testme-class.py  testme-inner.py  testme-partial.py  testme.py  testme_class.py
tests/: branch.py  branch_test.py  bytecode_test.py  class_test.py  importer.py  importer_test.py  pyptr_test.cxx  pyt.py  slipcover_test.py  test_agent.py  test_branch.py  test_bytecode.py  test_config.py  test_coverage.py  test_exclude_lines.py  test_importer.py  test_instrumentation.py  test_isolate.py  test_xdist.py  test_xdist_continuation_lines.py  test_xdist_fixes.py  timeit.py
tests/imported/: __init__.py  bad.py  foo.py
tests/imported/subdir/: baz.PY
tools/: compare.py  compare_missing.py  disfile.py  oracle.py
